Fixing conclusions in Background and finishing first part of conclusions chapter

--- a/MainMatter/Background.tex
+++ b/MainMatter/Background.tex
@@ -925,12 +925,9 @@ Los modelos sustitutos también han sido usados en los sistemas de AutoML como t
 
 \section{Conclusión}\label{sec:conclusion}
 
-La democratización de la Inteligencia Artificial es una de las preocupaciones fundamentales, tanto de la comunidad científica como de los expertos de la industria. El campo del AutoML se presenta como una alternativa prometedora para disminuir substancialmente el esfuerzo que conlleva la aplicación de técnicas de inteligencia artificial, y específicamente de aprendizaje automático, a problemas concretos. Por otro lado, el campo de meta-learning aplicado a AutoML permite permite rehusar conocimiento previo para solucionar nuevas tareas. Este tipo de estrategias ayudan a disminuir el costo de aplicar AutoML, al relacionar un nuevo conjunto de datos con los mejores flujos obtenidos en problemas similares previamente resueltos. La habilidad de los sistemas de computación de guardar virtualmente grandes cantidades de experiencias pasadas de aprendizaje (en forma de meta-datos) abre una gran cantidad de oportunidades de usar esa experiencia en maneras completamente diferentes, y apenas estamos empezando a aprender a aprender de la experiencia pasada efectivamente \cite{vanschoren2018metalearning}.
+La democratización de la Inteligencia Artificial es una de las preocupaciones fundamentales, tanto de la comunidad científica como de los expertos de la industria. El campo del AutoML se presenta como una alternativa prometedora para disminuir substancialmente el esfuerzo que conlleva la aplicación de técnicas de inteligencia artificial, y específicamente de aprendizaje automático, a problemas concretos. Por otro lado, el campo de meta-learning aplicado a AutoML permite rehusar conocimiento previo para solucionar nuevas tareas. Este tipo de estrategias ayuda a disminuir el costo de aplicar AutoML, al relacionar un nuevo conjunto de datos con los mejores flujos obtenidos en problemas similares previamente resueltos. La habilidad de los sistemas de computación de guardar virtualmente grandes cantidades de experiencias pasadas de aprendizaje (en forma de meta-datos) abre una gran cantidad de oportunidades de usar esa experiencia en maneras completamente diferentes, y apenas estamos empezando a aprender a aprender de la experiencia pasada efectivamente \cite{vanschoren2018metalearning}.
 
-Aunque existen varias herramientas de meta-learning que han sido exitosas al aplicarse a AutoML resolviendo problemas específicos de inteligencia artificial, estas herramientas son aún demasiado rígidas para ser utilizadas en problemas prácticos que requieren la combinación de algoritmos y tecnologías de diferente naturaleza. 
-
-
-Cada vez que intentamos aprender una determinada tarea, no importa si es exitosa o no, ganamos experiencia útil que puede ser utilizada para aprender nuevas tareas. No deberíamos nunca que tener que empezar totalmente desde el principio. Deberíamos sistemáticamente coleccionar nuevas tareas y aprender de ellas para construir sistemas de AutoML que mejoran continuamente con el tiempo, ayudándonos a abordar nuevos problemas más eficientemente. Mientras más tareas encontremos, y mientras más similares sean, más experiencia pasada podemos aprovechar, hasta el punto de que casi todo el conocimiento requerido ya ha sido realizado de antemano. . Este capítulo realiza un estudio de los campos y técnicas más importantes para la construcción de sistemas de AutoML que aprenden continuamente de experiencias pasadas.
+Aunque existen varias herramientas de meta-learning que han sido exitosas al aplicarse a AutoML, resolviendo problemas específicos de inteligencia artificial, estas herramientas son aún demasiado rígidas para ser utilizadas en problemas prácticos que requieren la combinación de algoritmos y tecnologías de diferente naturaleza. Por lo tanto, la herramienta de meta-learning creada tiene el objetivo de abordar una gran variedad de problemas mediante la selección de meta-features capaces de representarlas. Además, es necesario el uso de un sistema complementario de AutoML capaz de generar soluciones eficaces para una amplia gama de tareas y dominios. Por esta razón, se hace uso de AutoGOAL, que destaca por su capacidad de abordar diferentes dominios combinando de forma transparente técnicas y herramientas dispares. AutoGOAL usa como método de optimización \textit{Probabilistic Grammatical Evolution}~\cite{pge2015} (PGE), que no había sido usado anteriormente junto con meta-learning, lo que añade complejidad a la propuesta. El uso de esta estrategia de meta-learning permitirá disminuir el costo de aplicar AutoML y generalizar AutoML a dominios novedosos.
 
 %\\ \\
 %Las matrices $\widetilde{M}_{n}$, $L$, $r$ est\'{a}n definidas como en el esquema anterior.\\
