Fixing Suilan and Piad's reviews (again T.T)

--- a/references.bib
+++ b/references.bib
@@ -1372,3 +1372,38 @@ numpages = {15}
   biburl    = {https://dblp.org/rec/journals/corr/abs-1904-12054.bib},
   bibsource = {dblp computer science bibliography, https://dblp.org}
 }
+
+@inproceedings{hutter2011SequentialMO,
+  title={Sequential Model-Based Optimization for General Algorithm Configuration},
+  author={Frank Hutter and Holger H. Hoos and Kevin Leyton-Brown},
+  booktitle={LION},
+  year={2011}
+}
+
+@article{peng2020comprehensive,
+  author    = {Huimin Peng},
+  title     = {A Comprehensive Overview and Survey of Recent Advances in Meta-Learning},
+  journal   = {CoRR},
+  volume    = {abs/2004.11149},
+  year      = {2020},
+  url       = {https://arxiv.org/abs/2004.11149},
+  eprinttype = {arXiv},
+  eprint    = {2004.11149},
+  timestamp = {Sat, 23 Jan 2021 01:11:18 +0100},
+  biburl    = {https://dblp.org/rec/journals/corr/abs-2004-11149.bib},
+  bibsource = {dblp computer science bibliography, https://dblp.org}
+}
+
+@article{biggs1985role,
+author = {Biggs, J. B.},
+title = {The Role of Metalearning in Study Processes},
+journal = {British Journal of Educational Psychology},
+volume = {55},
+number = {3},
+pages = {185-212},
+doi = {https://doi.org/10.1111/j.2044-8279.1985.tb02625.x},
+url = {https://bpspsychub.onlinelibrary.wiley.com/doi/abs/10.1111/j.2044-8279.1985.tb02625.x},
+eprint = {https://bpspsychub.onlinelibrary.wiley.com/doi/pdf/10.1111/j.2044-8279.1985.tb02625.x},
+abstract = {Summary. Effective learning under institutional conditions requires, first, that students are aware of task demands and of their intentions of how, or even whether, to meet those demands, and, second, that they assess realistically, and exert control over, their own cognitive resources. The fulfilment of such conditions involves a sophisticated kind of metacognition, here called metalearning. The present paper describes a series of studies that collectively explicate the development and role of metalearning in the learning and study processes of secondary and tertiary students. Ability patterns, locus of control, variety and quality of certain non-school experiences, and extent and kind of motivation all seem to be involved in the development of metalearning capability. A model of student learning is then described, in which personal and situational factors are linked to performance by three main approaches to learning: deep, achieving, and surface. These approaches involve varying degrees of metalearning and lead to qualitatively different learning outcomes. An intervention study on improving student learning is described that tests important aspects of the model, and further implications for teaching and research are suggested.},
+year = {1985}
+}
